# nesty

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  Super_Mario_Forever_Clean_Patch.nes  TODO.txt  index.html  nesty.sav  nesty_web.js  nesty_web_bg.wasm  package.json  script.js  style.css
.github/workflows/: deploy.yaml
core/: Cargo.toml
core/src/: cartridge.rs  ppu.rs
core/src/mapper/: mapper0.rs  mapper1.rs
docs/: 6502_notes.txt
nesty/: Cargo.toml
nesty/src/: bus.rs  cartridge.rs  dma.rs  emulator.rs  io.rs  joypad.rs  lib.rs  m6502.rs  ppu.rs  savable.rs  startup_rom.rs
nesty/src/mapper/: mapper0.rs  mapper1.rs  mod.rs
pkg/: nesty_web.d.ts  nesty_web.js  nesty_web_bg.wasm  nesty_web_bg.wasm.d.ts
platform/desktop/: Cargo.toml
platform/desktop-sdl2/: Cargo.toml
platform/desktop-sdl2/src/: interface.rs  main.rs
platform/desktop/src/: main.rs
platform/web/: Cargo.toml  README.md  index.html  script.js  server.py  style.css
platform/web/src/: lib.rs  utils.rs
roms/startup-rom/: .gitignore  convert_to_byte_array.py  makefile  startup.asm  startup.cfg
src/: bitops.rs  bus.rs  cartridge.rs  cpubus.rs  emulator.rs  m6502.rs  macros.rs  main.rs  opcodes.rs  ppu.rs  ppubus.rs  traits.rs
src/mapper/: mapper0.rs  mapper1.rs  mod.rs
