[package]
name = "nesty-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
core = { path = "../../core" }
wasm-bindgen = "0.2.63"
js-sys = "0.3.58"
cfg-if = "0.1.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
